--- a/web/src/app/layouts/components/left-sidebar/left-sidebar.component.html
+++ b/web/src/app/layouts/components/left-sidebar/left-sidebar.component.html
@@ -1,4 +1,8 @@
 <div class="logo bborder">
   <img src="https://cdn.devstorage.eu/e/header-blue-white.png" width="100%">
 </div>
+<br>
+<button class="menu-btn btn btn-outline-primary btn-lg mb-2" routerLink="/dashboard">Dashboard</button>
+<button class="menu-btn btn btn-outline-primary btn-lg mb-2" routerLink="/jobs">Jobs</button>
+<button class="menu-btn btn btn-outline-primary btn-lg mb-2" routerLink="/settings">Settings</button>
 
