--- a/web/src/app/layouts/components/device-table-right-sidebar/device-table-right-sidebar.component.html
+++ b/web/src/app/layouts/components/device-table-right-sidebar/device-table-right-sidebar.component.html
@@ -127,4 +127,6 @@
     </button>
   </div>
 
+  <!-- TODO: Delete btn (with question dialog 'delete device with backups or without' and a failsafe delete confirmation)  -->
+
 </ng-container>
