--- a/web/src/app/layouts/components/top-headerbar/top-headerbar.component.html
+++ b/web/src/app/layouts/components/top-headerbar/top-headerbar.component.html
@@ -4,7 +4,7 @@
       <input type="text" class="search-input" autocomplete="false" placeholder="Suche...">
     </div>
     <div class="bd-highlight">
-      <button class="btn btn-primary add-device">Add device</button>
+      <button class="btn btn-primary add-device" routerLink="/devices/add/">Add device</button>
     </div>
     <div class="bd-highlight ml-30">
       <i class="far fa-question-circle icon"></i>
