--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,8 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+
+@import "node_modules/bootstrap/scss/bootstrap";
 
 @import '~animate.css/animate.css';
 
 @import "assets/utils.css";
+
+@import 'ngx-toastr/toastr';
