Outsource test device data to a separate file.

--- a/web/src/app/layouts/components/device-table/device-table.component.html
+++ b/web/src/app/layouts/components/device-table/device-table.component.html
@@ -82,7 +82,7 @@
 
   <ng-container ngbColumnDef="action">
     <th *ngbHeaderCellDef ngb-header-cell></th>
-    <td *ngbCellDef="let event" ngb-cell >
+    <td *ngbCellDef="let event" ngb-cell routerLink="/devices/manage/{{event.id}}">
       <i class="fas fa-angle-double-right opendevice-icon"></i>
     </td>
   </ng-container>
