--- a/web/src/app/layouts/default-layout/default-layout.component.html
+++ b/web/src/app/layouts/default-layout/default-layout.component.html
@@ -3,7 +3,7 @@
     <div class="col-2 col-xl-2 col-lg-2 col-md-3 col-sm-4 rborder">
       <app-left-sidebar></app-left-sidebar>
     </div>
-    <div class="col">
+    <div class="col mr-1">
       <app-top-headerbar></app-top-headerbar>
 
       <router-outlet></router-outlet>
