--- a/web/src/app/pages/devices/devices-manage/devices-manage.component.html
+++ b/web/src/app/pages/devices/devices-manage/devices-manage.component.html
@@ -1,12 +1,25 @@
-<div class="row">
+<div class="row mt-3">
   <div class="col-6">
     <div class="card">
       <div class="card-body">
-
+          {{device.name}}
       </div>
     </div>
   </div>
   <div class="col-6">
+
+
+    <div class="card">
+      <div class="card-header">
+        <h3>Backup plans</h3>
+      </div>
+      <div class="card-body">
+
+        <app-device-manage-backupplans></app-device-manage-backupplans>
+
+
+      </div>
+    </div>
 
   </div>
 </div>
