--- a/web/src/app/pages/devices/devices-manage/device-manage-backupplans/device-manage-backupplans-item/device-manage-backupplans-item.component.html
+++ b/web/src/app/pages/devices/devices-manage/device-manage-backupplans/device-manage-backupplans-item/device-manage-backupplans-item.component.html
@@ -1,21 +1,24 @@
 <div class="backup-accordion">
   <div class="d-flex bd-highlight" style="cursor: pointer" (click)="this.expanded = !this.expanded">
-    <div class="p-2 flex-grow-1 bd-highlight">
-      <b >{{ name }}</b>
 
+    <div class="p-2 bd-highlight">
       <i class="ml-1 fas fa-stop-circle" style="color: #c0c0c0" *ngIf="jobStatus == BackupJobStatus.DISABLED"></i>
+      <i class="ml-1 fas fa-clock" style="color: #c0c0c0" *ngIf="jobStatus == BackupJobStatus.IDLE"></i>
       <i class="ml-1 fas fa-spinner fa-spin"  style="color: #97dc71" *ngIf="jobStatus == BackupJobStatus.ACTIVE"></i>
       <i class="ml-1 fas fa-exclamation-triangle" style="color: #f6e052" *ngIf="jobStatus == BackupJobStatus.WARNING"></i>
       <i class="ml-1 fas fa-exclamation-circle" style="color: #da706a" *ngIf="jobStatus == BackupJobStatus.ERROR"></i>
-
-
     </div>
+
+    <div class="p-2 flex-grow-1 bd-highlight">
+      <b >{{ name }}</b>
+    </div>
+
     <div class="p-2 bd-highlight">
       <span  *ngIf="expanded"><i class="fas fa-angle-up"></i></span>
       <span  *ngIf="!expanded"><i class="fas fa-angle-down"></i></span>
     </div>
   </div>
-  <div *ngIf="expanded" class="p-2">
+  <div *ngIf="expanded" class="p-2 ml-3">
     <div class="d-flex bd-highlight">
       <div class="flex-grow-1 bd-highlight">
         <p>Status: {{ BackupJobStatus[jobStatus] }}</p>
@@ -32,9 +35,7 @@
         <!-- Disabled Job -->
         <div class="alert alert-warning" role="alert">
           This backup plan is currently disabled. Edit the job to reactivate the backup.
-          <button class="btn btn-sm btn-success pl-2">Edit / Reactivate</button>
         </div>
-
       </ng-container>
 
     <ng-container *ngIf="jobStatus == BackupJobStatus.IDLE">
@@ -74,14 +75,22 @@
       <ng-container *ngIf="jobStatus == BackupJobStatus.ERROR">
         <!-- Running Job -->
         <div class="alert alert-danger" role="alert">
-          <b>Error: </b> ABC1234ABC
+          <div class="d-flex bd-highlight">
+            <div class="flex-grow-1 bd-highlight">
+              <b>Error: </b> ABC1234ABC
+            </div>
+            <div class="pl-2 bd-highlight">
+              <button class="btn btn-sm btn-outline-warning">Retry</button>
+            </div>
+          </div>
+
         </div>
 
         <ngb-progressbar class="mb-2" type="danger" [value]="49" height="10px"></ngb-progressbar>
         <div class="d-flex bd-highlight">
           <div class="flex-grow-1 bd-highlight">49%</div>
           <div class="pl-2 bd-highlight">
-            <button class="btn btn-sm btn-outline-danger">Retry</button>
+            <button class="btn btn-sm btn-outline-danger">Cancel</button>
           </div>
         </div>
 
